# cs551

./: CMakeLists.txt  README.md  main.c  newton.c  newton.h  newtonTests.h
final/: CMakeLists.txt  FPToolkit.h  final_test_1_input  gauss_elimS.h  spline_test_data_2  splines.c  splines.h  splinesTests.h
hw4/: CMakeLists.txt  Lagrange.c  Lagrange.h  LagrangeTests.h
hw5/: CMakeLists.txt  LeastSquares.c  LeastSquares.h  LeastSquaresTests.h
hw6/: CMakeLists.txt  bsplines.c  bsplines.h  bsplinesTests.h
labs/poly_fitting/: CMakeLists.txt  main.cpp
